--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,117 +1,39 @@
 .projects-wrapper .main-wrapper {
   display: flex;
   justify-content: space-between;
-  word-wrap: break-word;
   padding: 30px;
 }
 
 .projects-wrapper .main-section {
+  display: flex;
+  flex-direction: column;
   width: 60%;
+  min-height: 540px;
+  overflow: hidden;
   padding: 10px;
-}
-
-.projects-wrapper .section-wrapper {
-  display: block;
 }
 
 .projects-wrapper .side-section {
   position: sticky;
   top: 1%;
   bottom: 1%;
-  height: 25%;
+  width: 25%;
+  min-width: 20%;
+  height: 25vh;
+  min-height: 200px;
+  overflow: hidden;
   padding: 10px;
 }
 
-.projects-wrapper .side-section nav {
+.projects-wrapper .main-section-item {
+  padding-bottom: 10px;
+}
+
+.projects-wrapper .side-section-nav {
   color: var(--heading-color);
 }
 
 .projects-wrapper .side-section-nav li {
   color: var(--calc-notice);
   margin: 10px 0 10px 0;
-}
-
-/*calculator-project*==========*/
-.calculator {
-  margin-bottom: 10px;
-}
-
-.calc-num-input {
-  color: #3a3a3a;
-  font-size: 2em;
-  border-radius: 5px;
-  border-style: groove;
-  width: 50%;
-}
-
-.calc-notice-section {
-  padding-top: 2%;
-  padding-bottom: 2%;
-  height: 1.1em;
-}
-
-.calc-buttons-section {
-  width: 50%;
-}
-
-.calc-result-section {
-  color: var(--font-color);
-  border-radius: 5px;
-  border: 1px solid var(--font-description-color);
-}
-
-/*calc btns headers paras*/
-.calculator h2 {
-  color: var(--heading-color);
-}
-
-.calculator h3 {
-  color: var(--titles-color);
-}
-
-#calc-notice {
-  color: var(--calc-notice);
-  font-size: 1.1em;
-  margin: 0;
-}
-
-.btn-calc {
-  margin: 20px 0 20px 0;
-  background-color: var(--links-bg-color);
-}
-
-.btn-cancel-calc {
-  margin: 20px 0 20px 0;
-  background-color: #ebb215;
-}
-
-.btn-calc
-,.btn-cancel-calc {
-  display: inline-block;
-  color: var(--links-color);
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  font-size: 16px;
-  border: none;
-  border-radius: 10px;
-  box-shadow: var(--calc-btn-bx-shdw);
-}
-
-.btn-calc:active
-,.btn-cancel-calc:active {
-  box-shadow: none;
-}
-
-.calc-result-section img {
-  height: 1.5em;
-  padding: 1% 1% 0 1%;
-}
-
-.calc-result-section p {
-  display: inline-block;
-  color: var(--font-color);
-  font-size: 1.5em;
-  margin-bottom: 1%;
-  max-width: 100%;
 }
