--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -1,44 +1,47 @@
-/*colors*/
+/*colors-light-mode*/
 :root {
-  --bg-color: #ffffff; 
-  --bg-btn-back-to-top: #f0f0f0;
-  --btn-back-to-top: #555555;
-  --resume-header-bg-color: #f0f0f0;
-  --heading-color: #181818;
-  --titles-color: #2F5A78;
-  --font-color: #3a3a3a;
-  --font-description-color: #6f7680;
-  --links-color: #242424;
-  --links-bg-color: #66bb6a;
-  --simple-links-color: #242424;
-  --simple-links-bg-color: rgb(150, 200, 150);
-  --simple-links-bg-color-hover: rgb(100, 200, 100);
-  --calc-notice: #b4352c;
-  --section-top-bottom-border: 1px solid rgb(216, 216, 216);
-  --section-shdws: 0px 2px 4px rgba(0, 0, 0, 0.1);
-  --btn-bx-shdw: 6px 5px 8px 1px rgb(100, 100, 100);
-  --calc-btn-bx-shdw: 0px 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+  --bg-color-body: #ffffff;
+  --bg-color-header-resume: #f0f0f0;
+  --bg-color-btn-back-to-top: #f0f0f0;
+  --bg-color-links: #66bb6a;
+  --bg-color-links-hover: #72e878;
+
+  --color-headings: #181818;
+  --color-titles: #2F5A78;
+  --color-font: #3a3a3a;
+  --color-font-description: #6f7680;
+  --color-links: #242424;
+  --color-btn-links: #242424;
+  --color-calc-notice: #b4352c;
+
+  --color-border-top-bottom: 1px solid rgb(216, 216, 216);
+  --color-section-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  --color-btn-back-to-top: #555555;
+  --color-btn-shadow: 6px 5px 8px 1px rgb(100, 100, 100);
+  --color-btn-calc-shadow: 0px 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
+/*colors-dark-mode*/
 .dark-mode {
-  --bg-color: #161625;
-  --bg-btn-back-to-top: #3e3e6a;
-  --btn-back-to-top: #ababc4;
-  --resume-header-bg-color: #f0f0f0;
-  --heading-color: #818cab;
-  --titles-color: #60ace2;
-  --font-color: #e1e1ff;
-  --font-description-color: #ceceff;
-  --links-color: #fcfcfc;
-  --links-bg-color: #66bb6a;
-  --simple-links-color: #242424;
-  --simple-links-bg-color: rgb(150, 200, 150);
-  --simple-links-bg-color-hover: rgb(100, 200, 100);
-  --calc-notice: #b68b88;
-  --section-top-bottom-border: 1px solid #4a4a7f;
-  --section-shdws: 0px 2px 4px rgba(100, 100, 150, 0.8);
-  --btn-bx-shdw: 6px 5px 8px 1px rgb(100, 100, 150);
-  --calc-btn-bx-shdw: 0px 8px 16px 0 rgba(100, 100, 150, 0.5), 0 6px 20px 0 rgba(0,0,0,0.19);
+  --bg-color-body: #161625;
+  --bg-color-header-resume: #f0f0f0;
+  --bg-color-btn-back-to-top: #3e3e6a;
+  --bg-color-links: #66bb6a;
+  --bg-color-links-hover: #72e878;
+
+  --color-headings: #818cab;
+  --color-titles: #60ace2;
+  --color-font: #e1e1ff;
+  --color-font-description: #ceceff;
+  --color-links: #fcfcfc;
+  --color-btn-links: #242424;
+  --color-calc-notice: #b68b88;
+
+  --color-border-top-bottom: 1px solid #4a4a7f;
+  --color-section-shadow: 0px 2px 4px rgba(100, 100, 150, 0.8);
+  --color-btn-back-to-top: #ababc4;
+  --color-btn-shadow: 6px 5px 8px 1px rgb(100, 100, 150);
+  --color-btn-calc-shadow: 0px 8px 16px 0 rgba(100, 100, 150, 0.5), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
 /*html*/
@@ -49,8 +52,8 @@
 
 /*body*/
 body {
-  background-color: var(--bg-color);
-  color: var(--font-color);
+  background-color: var(--bg-color-body);
+  color: var(--color-font);
   font-family: Verdana, Arial, "Times New Roman";
   font-size: 0.9em;
   padding: 3%;
@@ -59,7 +62,7 @@ body {
 /*back-to-top*/
 .btn-back-to-top {
   background-color: transparent;
-  color: var(--btn-back-to-top);
+  color: var(--color-btn-back-to-top);
   border: none;
   display: flex;
   justify-content: center;
@@ -77,7 +80,7 @@ body {
 }
 
 .btn-back-to-top:hover {
-  background-color: var(--bg-btn-back-to-top);
+  background-color: var(--bg-color-btn-back-to-top);
   transition: background-color .9s ease;
 }
 
@@ -138,7 +141,7 @@ i {
 a
 ,a:visited {
   text-decoration: none;
-  color: var(--links-color);
+  color: var(--color-links);
 }
 
 /*wrappers*/
@@ -149,13 +152,13 @@ a
   margin: 0 auto;
   width: 90%;
   word-wrap: break-word;
-  box-shadow: var(--section-shdws);
+  box-shadow: var(--color-section-shadow);
 }
 
 /*top-section-wrapper*/
 .top-wrapper {
   padding: 30px;
-  border-bottom: var(--section-top-bottom-border);
+  border-bottom: var(--color-border-top-bottom);
 }
 
 /*dark-mode-section*/
@@ -171,17 +174,17 @@ a
   margin-left: 10px;
   border-radius: 50px;
   border: none;
-  background-color: var(--links-bg-color);
-  color: var(--simple-links-color);
+  background-color: var(--bg-color-links);
+  color: var(--color-btn-links);
   cursor: pointer;
 }
 
 .dark-mode-section button:hover {
-  background-color: var(--simple-links-bg-color-hover);
+  background-color: var(--bg-color-links-hover);
 }
 
 .dark-mode-section button:active {
-  box-shadow: var(--btn-bx-shdw);
+  box-shadow: var(--color-btn-shadow);
 }
 
 /*top-section*/
@@ -191,25 +194,43 @@ a
   justify-content: space-between;
 }
 
-/*navigation*/
+/*top-navigation*/
 .top-nav {
   padding: 8px;
+}
+
+/*main-breadcrumbs-nav*/
+.main-nav {
+  padding: 10px 30px 10px 30px;
+}
+
+.main-nav i {
+  padding: 0 1% 0 1%;
+}
+
+.main-nav ul {
+  padding: 10px;
+}
+
+.main-nav ul li {
+  display: inline;
+  color: var(--color-font-description);
 }
 
 .top-nav ul li {
   display: inline-block;
   border: solid 2px transparent;
   padding-bottom: 5px;
-  font-size: 16px;
+  font-size: 1.2em;
 }
 
 .top-nav ul a:hover {
-  border-bottom: 2px solid var(--font-description-color);
+  border-bottom: 2px solid var(--color-font-description);
   padding-bottom: 5px;
 }
 
 .top-nav ul a:active {
-  border-bottom: 5px solid var(--font-description-color);
+  border-bottom: 5px solid var(--color-font-description);
 }
 
 /*header-common*/
@@ -218,12 +239,12 @@ a
 }
 
 .avatar {
-  box-shadow: var(--section-shdws);
+  box-shadow: var(--color-section-shadow);
 }
 
 .name,
 .position {
-  font-size: 16px;
+  font-size: 1.2em;
   display: inline-block;
   margin: 0;
   padding: 0 5px 0 5px;
@@ -249,7 +270,7 @@ a
   overflow: hidden;
   clear: both;
   padding: 30px;
-  border-top: var(--section-top-bottom-border);
+  border-top: var(--color-border-top-bottom);
 }
 
 .footer-section {
