--- a/styles/projects.css
+++ b/styles/projects.css
@@ -20,13 +20,37 @@
   width: 25%;
   min-width: 20%;
   height: 25vh;
-  min-height: 200px;
+  min-height: 20vh;
   overflow: hidden;
   padding: 10px;
 }
 
 .projects-wrapper .main-section-item {
-  padding-bottom: 10px;
+  margin-bottom: 1.5em;
+}
+
+.projects-wrapper .projects-meta {
+  margin-bottom: 0.7em;
+}
+
+.projects-wrapper .main-section-item h3 {
+  text-transform: capitalize;
+}
+
+.projects-wrapper .main-section-item ul li
+,.projects-wrapper .side-section-nav li {
+  margin-bottom: 0.5em;
+}
+
+.projects-wrapper .main-section-item ul li a:hover
+,.projects-wrapper .side-section-nav a:hover {
+  text-decoration: underline;
+}
+
+.projects-wrapper .main-section-item ul li i {
+  margin-left: 0.3em;
+  font-size: 0.7em;
+  padding: 0;
 }
 
 .projects-wrapper .side-section-nav {
@@ -35,5 +59,5 @@
 
 .projects-wrapper .side-section-nav li {
   color: var(--calc-notice);
-  margin: 10px 0 10px 0;
+  text-transform: capitalize;
 }
