--- a/styles/resume.css
+++ b/styles/resume.css
@@ -37,7 +37,7 @@
 .resume-wrapper .section ul
 ,.resume-wrapper .section p
 ,.contact-links li
-,.meta
+,.resume-meta
 ,.company-name
 ,.side-lang
 ,.side-skill-list>li
