--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,49 +1,49 @@
 .projects-wrapper .main-wrapper {
   display: flex;
   justify-content: space-between;
-  padding: 0 30px 0 30px;
+  padding: 0 2% 0 2%;
 }
 
 .projects-wrapper .main-section {
   display: flex;
   flex-direction: column;
-  width: 60%;
+  width: 65%;
   min-height: 540px;
   overflow: hidden;
-  padding: 10px;
-}
-
-.projects-wrapper .side-section {
-  position: sticky;
-  top: 1%;
-  bottom: 1%;
-  width: 25%;
-  min-width: 20%;
-  height: 25vh;
-  min-height: 20vh;
-  overflow: hidden;
-  padding: 10px;
+  padding: 0.5em;
 }
 
 .projects-wrapper .main-section-item {
   margin-bottom: 1.5em;
 }
 
-.projects-wrapper .projects-meta {
+.projects-wrapper .main-section-item h3 {
+  text-transform: capitalize;
+  color: var(--color-titles);
+}
+
+.projects-wrapper .meta {
   margin-bottom: 0.7em;
 }
 
-.projects-wrapper .main-section-item h3 {
-  text-transform: capitalize;
+.projects-wrapper .article-section {
+  margin-bottom: 0.7em;
 }
 
-.projects-wrapper .main-section-item ul li
-,.projects-wrapper .side-section-nav li {
+.projects-wrapper .article-section li {
   margin-bottom: 0.5em;
 }
 
-.projects-wrapper .main-section-item ul li a:hover
-,.projects-wrapper .side-section-nav a:hover {
+.projects-wrapper .side-section h3 {
+  margin-bottom: 1em;
+}
+
+.projects-wrapper .side-section-nav li {
+  margin-bottom: 1em;
+}
+
+.projects-wrapper .article-section li a:hover
+,.projects-wrapper .side-section-nav li a:hover {
   text-decoration: underline;
 }
 
@@ -53,11 +53,38 @@
   padding: 0;
 }
 
+.projects-wrapper .main-section-item table {
+  max-width: 90%;
+  margin-bottom: 1em;
+}
+
+.projects-wrapper .main-section-item table, th, td {
+  border: 1px solid var(--color-font);
+  border-collapse: collapse;
+  padding: 1em;
+  text-align: left;
+}
+
+.projects-wrapper .main-section-item table tr:nth-child(even) {
+  background-color: var(--bg-color-header-resume);
+}
+
+.projects-wrapper .side-section {
+  position: sticky;
+  top: 1%;
+  bottom: 1%;
+  width: 25%;
+  min-width: 20%;
+  height: 80vh;
+  min-height: 60vh;
+  overflow: hidden;
+  padding: 0.5em;
+}
+
 .projects-wrapper .side-section-nav {
   color: var(--color-headings);
 }
 
 .projects-wrapper .side-section-nav li {
-  color: var(--calc-notice);
   text-transform: capitalize;
 }
