--- a/styles/main.css
+++ b/styles/main.css
@@ -364,6 +364,13 @@ table tr:nth-child(even) {
   justify-content: center;
 }
 
+.index-wrapper .hello-title
+,.index-wrapper .gallery-section h2
+,.index-wrapper .tools-section h2
+,.index-wrapper .vendors-section h2 {
+  font-size: 2em;
+}
+
 /*index-about*/
 .index-wrapper .about-section
 ,.index-wrapper .link-section {
@@ -373,10 +380,6 @@ table tr:nth-child(even) {
 .index-wrapper .link-section {
   margin: 2%;
   text-align: center;
-}
-
-.index-wrapper .hello-title {
-  font-size: 2em;
 }
 
 .index-wrapper .avatar {
@@ -418,11 +421,6 @@ table tr:nth-child(even) {
 }
 
 /*index-gallery*/
-
-.index-wrapper .gallery-section h2 {
-  font-size: 2em;
-}
-
 .index-wrapper .dislayed-img-wrapper {
   display: flex;
   align-items: center;
@@ -457,12 +455,25 @@ table tr:nth-child(even) {
 }
 
 /*index-table-tools*/
-.index-wrapper .tools-section h2 {
-  font-size: 2em;
-}
-
 .index-wrapper .tools-section table {
   width: 100%;
+}
+
+/*index-table-vendors*/
+.index-wrapper .vendors-section table {
+  width: 100%;
+  border-style: hidden;
+  text-align: center;
+  border-collapse: separate;
+}
+
+.index-wrapper .vendors-section table th:hover
+,.index-wrapper .vendors-section table td:hover {
+  background-color: var(--bg-color-table);
+}
+
+.index-wrapper .vendors-section table tr:nth-child(even) {
+  background-color: var(--bg-color-body);
 }
 
 /*RESUME-STYLE*/
@@ -694,6 +705,11 @@ table tr:nth-child(even) {
   text-transform: capitalize;
 }
 
+#bug-type-img {
+  width: 50%;
+  align-items: center;
+}
+
 /*-calculator-style*/
 .projects-wrapper .calculator {
   margin-bottom: 10px;
@@ -720,7 +736,7 @@ table tr:nth-child(even) {
 .projects-wrapper .calc-result-section {
   color: var(--color-font);
   border-radius: 5px;
-  border: 1px solid var(--color-font-description);
+  border: 1px solid var(--color-border-table);
 }
 
 /*calc btns headers paras*/
@@ -739,30 +755,30 @@ table tr:nth-child(even) {
 }
 
 .projects-wrapper .btn-calc {
-  margin: 20px 0 20px 0;
+  margin: 1em 0 1em 0;
   background-color: var(--bg-color-links);
 }
 
 .projects-wrapper .btn-cancel-calc {
-  margin: 20px 0 20px 0;
+  margin: 1em 0 1em 0;
   background-color: #ebb215;
 }
 
 .projects-wrapper .btn-calc
-.projects-wrapper ,.btn-cancel-calc {
+,.projects-wrapper .btn-cancel-calc {
   display: inline-block;
   color: var(--color-btn-links);
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
-  font-size: 16px;
+  font-size: 1em;
   border: none;
   border-radius: 10px;
   box-shadow: var(--color-btn-shadow);
 }
 
 .projects-wrapper .btn-calc:active
-.projects-wrapper ,.btn-cancel-calc:active {
+,.projects-wrapper .btn-cancel-calc:active {
   box-shadow: none;
 }
 
